
* The `html` field type will be removed in the future. Instead the `string` type will be used in combination with an additional configuration property for this field in the schema. Of course, your existing schemas will be migrated for you.

[[v1.8.3]]
== 1.8.3 (TBD)

icon:check[] Core: The included Mesh UI has been updated to version `1.3.3`.

[[v1.8.2]]
== 1.8.2 (29.03.2022)

icon:check[] Core: The max form attribute size can now be configured and is set to unlimited by default. This limit became relevant for multipart requests after the update to Vert.x 3.9.12.

[[v1.8.1]]
== 1.8.1 (24.03.2022)

icon:check[] Core: The included Mesh UI has been updated to version `1.3.2`.

[[v1.8.0]]
== 1.8.0 (21.03.2022)

icon:bullhorn[] Architecture overhaul

[quote]
____

The internal architecture has been changed, in order to make a clean separation between the business logic and
the persistence layer.

The business logic is now completely independent from our current persistency layer (OrientDB), but uses an
(internal) persistence API instead. Persistence with OrientDB is the current implementation of the persistence API.
____

CAUTION: The support for the *embedded* version of Elasticsearch has been dropped. It is necessary now to link:{{< relref "elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

icon:plus[] Core: The core Vert.x library was updated to version `3.9.12`.

CAUTION: With the update to Vert.x 3.9.12, creating a StaticHandler in a plugin to serve static files from the plugin's classpath does not work any more.
Instead of creating an instance of the StaticHandler, the new method RestPlugin::addStaticHandlerFromClasspath should be used instead.

icon:plus[] Rest: The endpoint `/api/v1/admin/jobs` now supports query parameters for filtering
(`status`, `type`, `branchName`, `branchUuid`, `schemaName`, `schemaUuid`, `microschemaName`, `microschemaUuid`, `fromVersion`, `toVersion`).
